k8s/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    haproxy.org/ssl-redirect: "true"
spec:
  rules:
    - host: keycloak.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-http  # This is the service name created by the operator
                port:
                  number: 8080
